# weevr-cli

./: .cspell.json  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: code-quality.yaml  codeql.yml  docs.yaml  release.yaml
.weevr/: cli.yaml
1.0/: 404.html  index.html  sitemap.xml
1.0/changelog/: index.html
1.0/cli/: index.html
1.0/configuration/: index.html
1.0/getting-started/: index.html
1.0/guides/deploy-workflows/: index.html
1.0/guides/plugin-authoring/: index.html
1.0/release-notes/: index.html
1.0/search/: search_index.json
1.1/: 404.html  index.html  sitemap.xml
1.1/cli/: index.html
1.1/configuration/: index.html
1.1/getting-started/: index.html
1.1/guides/deploy-workflows/: index.html
1.1/guides/plugin-authoring/: index.html
1.1/release-notes/: index.html
1.1/search/: search_index.json
1.2/: 404.html  index.html  sitemap.xml
1.2/cli/: index.html
1.2/configuration/: index.html
1.2/getting-started/: index.html
1.2/guides/deploy-workflows/: index.html
1.2/guides/plugin-authoring/: index.html
1.2/guides/warp-files/: index.html
1.2/release-notes/: index.html
1.2/search/: search_index.json
docs/: changelog.md  getting-started.md  index.md
docs/cli/: index.md
docs/configuration/: index.md
docs/guides/: deploy-workflows.md  plugin-authoring.md  reference-syntax.md  warp-files.md
src/weevr_cli/: __init__.py  _cli_click.py  cli.py  config.py  ignore.py  output.py  state.py  templates.py
tests/: test_cli.py  test_config.py  test_deploy_cmd.py  test_ignore.py  test_init.py  test_list_cmd.py  test_new.py  test_output.py  test_plugins_cmd.py  test_schema_cmd.py  test_state.py  test_status_cmd.py  test_status_models.py  test_templates.py  test_validate.py
tests/test_deploy/: test_collector.py  test_diff.py  test_executor.py  test_ignore.py  test_models.py  test_onelake.py  test_target.py
tests/test_listing/: test_graph.py  test_models.py  test_table.py  test_tree.py
tests/test_plugins/: test_discovery.py  test_protocol.py  test_registry.py
tests/test_validation/: test_refs.py  test_resolver.py  test_results.py  test_schema.py
(+38 files in other folders)
